# lambda

./: README.md  lynx.yaml  pyproject.toml
.github/workflows/: self_thinking_test.yaml  tests.yml
docs/: spec.lynx.md
docs/guide/: drift_concepts.md
lambda_lib/: __init__.py  cli.py
lambda_lib/core/: __init__.py  engine.py  node.py  operation.py  pattern.py  rewrite.py
lambda_lib/examples/: __init__.py  feature_to_concept.py  simple_eval.py
lambda_lib/governance/: __init__.py  governor.py  meta_governor.py
lambda_lib/graph/: __init__.py  graph_utils.py  transform.py  visualize.py
lambda_lib/memory/: __init__.py  mem_node.py  sequence.py
lambda_lib/metrics/: __init__.py  accuracy.py  gradient.py  reward.py
lambda_lib/models/: __init__.py  classifier.py
lambda_lib/ops/: __init__.py  arithmetic.py  collaboration.py  concept_inventor.py  convolve.py  eval.py  feature_discoverer.py  logic.py  meta_spawn.py  mirror.py  model_spawner.py  phase.py  refactor.py  spawn.py  spawn_feature.py
lambda_lib/patterns/: __init__.py  dsl.py  (+1 more)
patterns/: spawn_feature.yaml
scripts/: anomaly_worker.py
tests/: test_anomaly_autolearn.py  test_anomaly_validation.py  test_collaboration_ops.py  test_concept_inventor.py  test_engine.py  test_feature_discoverer.py  test_feature_spawn.py  test_governor.py  test_learning_cycle.py  test_meta_governor.py  test_meta_spawn.py  test_metrics.py  test_model_spawner.py  test_ops.py  test_refactor_op.py  test_reward_learning.py  test_runtime_dynamic_rules.py  test_sensors.py  test_sequence_memory.py  verify_reward_growth.py
(+20 files in other folders)
